--- a/setup.cfg
+++ b/setup.cfg
@@ -1,3 +1,8 @@
+[bumpversion]
+current_version = 0.0.1
+commit = True
+tag = True
+
 [metadata]
 name = builderer
 version = attr: builderer.__version__
@@ -25,3 +30,7 @@ classifiers =
 zip_safe = False
 include_package_data = True
 packages = find:
+
+[bumpversion:file:builderer/__init__.py]
+search = __version__ = "{current_version}"
+replace = __version__ = "{new_version}"
