added cli and file config

--- a/setup.cfg
+++ b/setup.cfg
@@ -30,6 +30,13 @@ classifiers =
 zip_safe = False
 include_package_data = True
 packages = find:
+install_requires = 
+	pydantic_argparse>=0.6
+	pyyaml>=5.1
+
+[options.entry_points]
+console_scripts = 
+	builderer = builderer.__main__:main
 
 [bumpversion:file:builderer/__init__.py]
 search = __version__ = "{current_version}"
