Improved package metadata

--- a/setup.cfg
+++ b/setup.cfg
@@ -8,6 +8,8 @@ name = builderer
 version = attr: builderer.__version__
 description = Container based mono repo builder.
 long_description = file: README.md
+long_description_content_type = text/markdown
+url = https://github.com/florian-sattler/builderer
 keywords = 
 	builderer
 	continuous integration
@@ -15,6 +17,7 @@ keywords =
 author = Florian Sattler
 author_email = dev@florian-sattler.de
 license = MIT
+license_file = LICENSE
 classifiers = 
 	Intended Audience :: Developers
 	Intended Audience :: Information Technology
