--- a/setup.cfg
+++ b/setup.cfg
@@ -1,5 +1,5 @@
 [bumpversion]
-current_version = 0.1.0
+current_version = 0.2.0
 commit = True
 tag = True
 
@@ -37,9 +37,43 @@ install_requires =
 	pydantic_argparse>=0.6
 	pyyaml>=5.1
 
+[options.packages.find]
+exclude = 
+	tests
+
 [options.entry_points]
 console_scripts = 
 	builderer = builderer.__main__:main
+
+[options.package_data]
+* = *.json
+
+[flake8]
+per-file-ignores = __init__.py:F401
+max-complexity = 10
+max-line-length = 120
+
+[aliases]
+test = pytest
+
+[tool:pytest]
+addopts = --ignore setup.py
+
+[mypy]
+disallow_untyped_defs = True
+plugins = pydantic.mypy
+follow_imports = silent
+warn_redundant_casts = True
+warn_unused_ignores = True
+disallow_any_generics = True
+check_untyped_defs = True
+no_implicit_reexport = True
+
+[pydantic-mypy]
+init_forbid_extra = True
+init_typed = True
+warn_required_dynamic_aliases = True
+warn_untyped_fields = True
 
 [bumpversion:file:builderer/__init__.py]
 search = __version__ = "{current_version}"
