ported to argparse

--- a/setup.cfg
+++ b/setup.cfg
@@ -34,8 +34,8 @@ zip_safe = False
 include_package_data = True
 packages = find:
 install_requires = 
-	pydantic_argparse>=0.6
-	pyyaml>=5.1
+	pydantic >=1.9, <2
+	pyyaml >=5.1
 
 [options.packages.find]
 exclude = 
