--- a/setup.cfg
+++ b/setup.cfg
@@ -68,6 +68,7 @@ warn_unused_ignores = True
 disallow_any_generics = True
 check_untyped_defs = True
 no_implicit_reexport = True
+exclude = tests/example_workspace/.*
 
 [pydantic-mypy]
 init_forbid_extra = True
