additional pypi urls

--- a/setup.cfg
+++ b/setup.cfg
@@ -9,7 +9,12 @@ version = attr: builderer.__version__
 description = Container based mono repo builder.
 long_description = file: README.md
 long_description_content_type = text/markdown
-url = https://github.com/florian-sattler/builderer
+project_urls =
+	Home = "https://github.com/florian-sattler/builderer"
+	Repository = "https://github.com/florian-sattler/builderer"
+	Changes = "https://github.com/florian-sattler/builderer/blob/main/CHANGELOG.md"
+	Documentation = "https://builderer.florian-sattler.de/"
+	"Bug Tracker" = "https://github.com/florian-sattler/builderer/issues"
 keywords = 
 	builderer
 	continuous integration
