fixed pypi project urls

--- a/setup.cfg
+++ b/setup.cfg
@@ -9,12 +9,13 @@ version = attr: builderer.__version__
 description = Container based mono repo builder.
 long_description = file: README.md
 long_description_content_type = text/markdown
-project_urls = 
-	Home = "https://github.com/florian-sattler/builderer"
-	Repository = "https://github.com/florian-sattler/builderer"
-	Changes = "https://github.com/florian-sattler/builderer/blob/main/CHANGELOG.md"
-	Documentation = "https://builderer.florian-sattler.de/"
-	"Bug Tracker" = "https://github.com/florian-sattler/builderer/issues"
+url = https://github.com/florian-sattler/builderer/
+project_urls =
+	Documentation = https://builderer.florian-sattler.de/
+	Source = https://github.com/florian-sattler/builderer/
+	Changelog = https://github.com/florian-sattler/builderer/blob/main/CHANGELOG.md
+	Tracker = https://github.com/florian-sattler/builderer/issues
+	Download = https://pypi.org/project/builderer/#files
 keywords = 
 	builderer
 	continuous integration
