--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -53,7 +53,7 @@ markdown_extensions:
   - pymdownx.extra
   - pymdownx.details
   - pymdownx.superfences
-
+  - mdx_truly_sane_lists
 extra:
   social:
     - icon: fontawesome/brands/github
