--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -37,6 +37,7 @@ jinja2==3.1.2
 markdown==3.3.7
     # via
     #   markdown-include
+    #   mdx-truly-sane-lists
     #   mkdocs
     #   mkdocs-material
     #   pymdown-extensions
@@ -46,6 +47,8 @@ markupsafe==2.1.2
     # via jinja2
 mccabe==0.7.0
     # via flake8
+mdx-truly-sane-lists==1.3
+    # via -r requirements-dev.in
 mergedeep==1.3.4
     # via mkdocs
 mkdocs==1.4.2
