--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -21,11 +21,15 @@ click==8.1.3
     #   black
     #   mkdocs
 colorama==0.4.6
-    # via mkdocs-material
+    # via
+    #   griffe
+    #   mkdocs-material
 flake8==6.0.0
     # via -r requirements-dev.in
 ghp-import==2.1.0
     # via mkdocs
+griffe==0.25.4
+    # via mkdocstrings-python
 idna==3.4
     # via requests
 iniconfig==2.0.0
@@ -34,17 +38,22 @@ jinja2==3.1.2
     # via
     #   mkdocs
     #   mkdocs-material
+    #   mkdocstrings
 markdown==3.3.7
     # via
     #   markdown-include
     #   mdx-truly-sane-lists
     #   mkdocs
+    #   mkdocs-autorefs
     #   mkdocs-material
+    #   mkdocstrings
     #   pymdown-extensions
 markdown-include==0.8.1
     # via -r requirements-dev.in
 markupsafe==2.1.2
-    # via jinja2
+    # via
+    #   jinja2
+    #   mkdocstrings
 mccabe==0.7.0
     # via flake8
 mdx-truly-sane-lists==1.3
@@ -52,11 +61,22 @@ mdx-truly-sane-lists==1.3
 mergedeep==1.3.4
     # via mkdocs
 mkdocs==1.4.2
-    # via mkdocs-material
+    # via
+    #   mkdocs-autorefs
+    #   mkdocs-material
+    #   mkdocstrings
+mkdocs-autorefs==0.4.1
+    # via mkdocstrings
 mkdocs-material==9.0.12
     # via -r requirements-dev.in
 mkdocs-material-extensions==1.1.1
     # via mkdocs-material
+mkdocstrings==0.20.0
+    # via
+    #   -r requirements-dev.in
+    #   mkdocstrings-python
+mkdocstrings-python==0.8.3
+    # via -r requirements-dev.in
 mypy==1.0.0
     # via -r requirements-dev.in
 mypy-extensions==1.0.0
@@ -82,7 +102,9 @@ pyflakes==3.0.1
 pygments==2.14.0
     # via mkdocs-material
 pymdown-extensions==9.9.2
-    # via mkdocs-material
+    # via
+    #   mkdocs-material
+    #   mkdocstrings
 pyproject-hooks==1.0.0
     # via build
 pytest==7.2.1
