updated black and flake8 config

--- a/setup.cfg
+++ b/setup.cfg
@@ -51,16 +51,11 @@ exclude =
 console_scripts = 
 	builderer = builderer.__main__:main
 
-[options.package_data]
-* = *.json
-
 [flake8]
 per-file-ignores = __init__.py:F401
+extend-ignore = E501
 max-complexity = 10
 max-line-length = 120
-
-[aliases]
-test = pytest
 
 [tool:pytest]
 addopts = --ignore setup.py
