--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,3 +1,7 @@
 [build-system]
 build-backend = "setuptools.build_meta"
 requires = ["setuptools"]
+
+[tool.black]
+line-length = 120
+target-version = ['py39']
