--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -24,11 +24,13 @@ colorama==0.4.6
     # via
     #   griffe
     #   mkdocs-material
+coverage[toml]==7.1.0
+    # via pytest-cov
 flake8==6.0.0
     # via -r requirements-dev.in
 ghp-import==2.1.0
     # via mkdocs
-griffe==0.25.4
+griffe==0.25.5
     # via mkdocstrings-python
 idna==3.4
     # via requests
@@ -67,7 +69,7 @@ mkdocs==1.4.2
     #   mkdocstrings
 mkdocs-autorefs==0.4.1
     # via mkdocstrings
-mkdocs-material==9.0.12
+mkdocs-material==9.0.13
     # via -r requirements-dev.in
 mkdocs-material-extensions==1.1.1
     # via mkdocs-material
@@ -77,7 +79,7 @@ mkdocstrings==0.20.0
     #   mkdocstrings-python
 mkdocstrings-python==0.8.3
     # via -r requirements-dev.in
-mypy==1.0.0
+mypy==1.0.1
     # via -r requirements-dev.in
 mypy-extensions==1.0.0
     # via
@@ -108,6 +110,13 @@ pymdown-extensions==9.9.2
 pyproject-hooks==1.0.0
     # via build
 pytest==7.2.1
+    # via
+    #   -r requirements-dev.in
+    #   pytest-cov
+    #   pytest-mock
+pytest-cov==4.0.0
+    # via -r requirements-dev.in
+pytest-mock==3.10.0
     # via -r requirements-dev.in
 python-dateutil==2.8.2
     # via ghp-import
@@ -123,7 +132,7 @@ requests==2.28.2
     # via mkdocs-material
 six==1.16.0
     # via python-dateutil
-types-pyyaml==6.0.12.5
+types-pyyaml==6.0.12.8
     # via -r requirements-dev.in
 typing-extensions==4.4.0
     # via mypy
