--- a/setup.cfg
+++ b/setup.cfg
@@ -31,7 +31,6 @@ classifiers =
 	Operating System :: OS Independent
 	Programming Language :: Python :: 3
 	Programming Language :: Python :: 3 :: Only
-	Programming Language :: Python :: 3.9
 	Programming Language :: Python :: 3.10
 	Programming Language :: Python :: 3.11
 
@@ -39,6 +38,7 @@ classifiers =
 zip_safe = False
 include_package_data = True
 packages = find:
+python_requires = >=3.10
 install_requires = 
 	pydantic >=1.9, <2
 	pyyaml >=5.1
