--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -69,7 +69,7 @@ copyright: Copyright &copy; 2023 Florian Sattler
 
 plugins:
   - mkdocstrings:
-      enabled: !ENV [ENABLE_MKDOCSTRINGS, true]
+      enabled: true
       custom_templates: templates
       default_handler: python
       handlers:
@@ -77,4 +77,7 @@ plugins:
           options:
             heading_level: 3
             show_source: false
+            show_root_heading: true
+            show_submodules: true
+
   - search
