--- a/requirements.txt
+++ b/requirements.txt
@@ -4,7 +4,7 @@
 #
 #    pip-compile --output-file=requirements.txt --resolver=backtracking requirements-dev.in setup.cfg
 #
-black==23.3.0
+black==23.7.0
     # via -r requirements-dev.in
 build==0.10.0
     # via
@@ -14,9 +14,9 @@ bump2version==1.0.1
     # via -r requirements-dev.in
 certifi==2023.5.7
     # via requests
-charset-normalizer==3.1.0
+charset-normalizer==3.2.0
     # via requests
-click==8.1.3
+click==8.1.4
     # via
     #   black
     #   mkdocs
@@ -25,15 +25,15 @@ colorama==0.4.6
     # via
     #   griffe
     #   mkdocs-material
-coverage[toml]==7.2.5
+coverage[toml]==7.2.7
     # via pytest-cov
-exceptiongroup==1.1.1
+exceptiongroup==1.1.2
     # via pytest
 flake8==6.0.0
     # via -r requirements-dev.in
 ghp-import==2.1.0
     # via mkdocs
-griffe==0.27.5
+griffe==0.31.0
     # via mkdocstrings-python
 idna==3.4
     # via requests
@@ -55,7 +55,7 @@ markdown==3.3.7
     #   pymdown-extensions
 markdown-include==0.8.1
     # via -r requirements-dev.in
-markupsafe==2.1.2
+markupsafe==2.1.3
     # via
     #   jinja2
     #   mkdocstrings
@@ -72,17 +72,17 @@ mkdocs==1.4.3
     #   mkdocstrings
 mkdocs-autorefs==0.4.1
     # via mkdocstrings
-mkdocs-material==9.1.13
+mkdocs-material==9.1.18
     # via -r requirements-dev.in
 mkdocs-material-extensions==1.1.1
     # via mkdocs-material
-mkdocstrings==0.21.2
+mkdocstrings==0.22.0
     # via
     #   -r requirements-dev.in
     #   mkdocstrings-python
-mkdocstrings-python==1.0.0
+mkdocstrings-python==1.1.2
     # via -r requirements-dev.in
-mypy==1.3.0
+mypy==1.4.1
     # via -r requirements-dev.in
 mypy-extensions==1.0.0
     # via
@@ -96,15 +96,15 @@ packaging==23.1
     #   pytest
 pathspec==0.11.1
     # via black
-pip-tools==6.13.0
+pip-tools==6.14.0
     # via -r requirements-dev.in
-platformdirs==3.5.1
+platformdirs==3.8.1
     # via black
-pluggy==1.0.0
+pluggy==1.2.0
     # via pytest
 pycodestyle==2.10.0
     # via flake8
-pydantic==1.10.7
+pydantic==1.10.11
     # via builderer (setup.cfg)
 pyflakes==3.0.1
     # via flake8
@@ -116,14 +116,14 @@ pymdown-extensions==10.0.1
     #   mkdocstrings
 pyproject-hooks==1.0.0
     # via build
-pytest==7.3.1
+pytest==7.4.0
     # via
     #   -r requirements-dev.in
     #   pytest-cov
     #   pytest-mock
-pytest-cov==4.0.0
+pytest-cov==4.1.0
     # via -r requirements-dev.in
-pytest-mock==3.10.0
+pytest-mock==3.11.1
     # via -r requirements-dev.in
 python-dateutil==2.8.2
     # via ghp-import
@@ -135,9 +135,9 @@ pyyaml==6.0
     #   pyyaml-env-tag
 pyyaml-env-tag==0.1
     # via mkdocs
-regex==2023.5.5
+regex==2023.6.3
     # via mkdocs-material
-requests==2.30.0
+requests==2.31.0
     # via mkdocs-material
 six==1.16.0
     # via python-dateutil
@@ -147,15 +147,16 @@ tomli==2.0.1
     #   build
     #   coverage
     #   mypy
+    #   pip-tools
     #   pyproject-hooks
     #   pytest
-types-pyyaml==6.0.12.9
+types-pyyaml==6.0.12.10
     # via -r requirements-dev.in
-typing-extensions==4.5.0
+typing-extensions==4.7.1
     # via
     #   mypy
     #   pydantic
-urllib3==2.0.2
+urllib3==2.0.3
     # via requests
 watchdog==3.0.0
     # via mkdocs
