fixed missing config for tests

--- a/setup.cfg
+++ b/setup.cfg
@@ -10,13 +10,13 @@ description = Container based mono repo builder.
 long_description = file: README.md
 long_description_content_type = text/markdown
 url = https://github.com/florian-sattler/builderer/
-project_urls = 
+project_urls =
 	Documentation = https://builderer.florian-sattler.de/
 	Source = https://github.com/florian-sattler/builderer/
 	Changelog = https://github.com/florian-sattler/builderer/blob/main/CHANGELOG.md
 	Tracker = https://github.com/florian-sattler/builderer/issues
 	Download = https://pypi.org/project/builderer/#files
-keywords = 
+keywords =
 	builderer
 	continuous integration
 	continuous delivery
@@ -24,7 +24,8 @@ author = Florian Sattler
 author_email = dev@florian-sattler.de
 license = MIT
 license_file = LICENSE
-classifiers = 
+classifiers =
+	Development Status :: 5 - Production/Stable
 	Intended Audience :: Developers
 	Intended Audience :: Information Technology
 	License :: OSI Approved :: MIT License
@@ -39,20 +40,22 @@ zip_safe = False
 include_package_data = True
 packages = find:
 python_requires = >=3.10
-install_requires = 
+install_requires =
 	pydantic >=1.9, <2
 	pyyaml >=5.1
 
 [options.packages.find]
-exclude = 
+exclude =
 	tests
 
 [options.entry_points]
-console_scripts = 
+console_scripts =
 	builderer = builderer.__main__:main
 
 [flake8]
-per-file-ignores = __init__.py:F401
+per-file-ignores =
+	__init__.py:F401
+	tests/*:D100,D101,D103,D104,D105,D107
 extend-ignore = E501
 max-complexity = 10
 max-line-length = 120
