--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -58,3 +58,9 @@ repos:
       - id: pyupgrade
         args:
           - "--py310-plus"
+  - repo: https://github.com/pre-commit/mirrors-mypy
+    rev: "v1.4.1"
+    hooks:
+      - id: mypy
+        additional_dependencies: [pydantic<2, types-PyYAML]
+        exclude: tests/example_workspace
